[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/shipthis/wizards/android/steps/Step1CreateGame.gd" id="1_step"]

[node name="Step1CreateGame" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_step")

[node name="Title" type="Label" parent="."]
layout_mode = 2
text = "Please confirm the following information about your game"
theme_override_font_sizes/font_size = 14

[node name="LoadingLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Loading..."

[node name="FormContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="GameNameLabel" type="Label" parent="FormContainer"]
layout_mode = 2
text = "Game Name"

[node name="GameNameInput" type="LineEdit" parent="FormContainer"]
layout_mode = 2
placeholder_text = "My Awesome Game"

[node name="Spacer1" type="Control" parent="FormContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="PackageNameLabel" type="Label" parent="FormContainer"]
layout_mode = 2
text = "Android Package Name"

[node name="PackageNameInput" type="LineEdit" parent="FormContainer"]
layout_mode = 2
placeholder_text = "com.example.myawesomegame"

[node name="Spacer2" type="Control" parent="FormContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="SubmitButton" type="Button" parent="FormContainer"]
layout_mode = 2
text = "Create Game"

[node name="StatusLabel" type="Label" parent="."]
visible = false
layout_mode = 2
